woost/views/resources/styles/backoffice.css
/* ... */
.BackOfficeLayout .Form label {
    display: block;
    padding-bottom: 0.2em;
}

.BackOfficeLayout .Form .language {
    color: rgb(75,75,75);
    font-style: italic;
    font-size: 75%;
}

.BackOfficeLayout .Form.redundant_translation_labels .language {
    margin-left: 0.5em;
}

.BackOfficeLayout .Form.grouped_translation_labels .language {
    display: block;
    margin-bottom: 0.3em;
}

.BackOfficeLayout .Form.grouped_translation_labels .field_instance-CheckBox .language {
    display: inline-block;
}

.BackOfficeLayout .Form .required_mark {
    font-weight: bold;
    color: rgb(100,125,150);
    padding-left: 0.3em;
}

.BackOfficeLayout .Form .field_instance-HiddenInput {
    display: none;
}

.BackOfficeLayout .Form .field_instance-CheckBox label {
    display: inline;
}

.BackOfficeLayout .Form .field_instance-CheckBox input {
    width: auto !important;
    margin-left: 0;
    margin-right: 0.4em;
}

.BackOfficeLayout .Form .control,
.BackOfficeLayout .Form .field_instance-DatePicker .time  {
    font-size: 90%;
}

.BackOfficeLayout .Form td .control,
.BackOfficeLayout .Form td .mceEditor .mceLayout,
.BackOfficeLayout .Form td .ItemSelector button {
    width: 100%;
}

.BackOfficeLayout .Form td .DatePicker {
    width: 8em;
    margin-right: 0.5em;
}

.BackOfficeLayout .ui-datepicker-trigger {
    margin-left: 0.3em;
    vertical-align: middle;
}

.BackOfficeLayout .DatePicker,
.BackOfficeLayout .field_instance .DatePicker.control {
    width: 8em;
}

.field_instance-DatePicker .time {
    margin-left: 0.9em;
    width: 6em;
}

.BackOfficeLayout .CollectionEditor .MoneyBox {
    display: inline-block;
    margin-right: 1em;
}

/* DropdownPanel
-----------------------------------------------------------------------------*/
.scripted .DropdownPanel > .panel_wrapper > .panel {
    -moz-box-shadow: 3px 3px 7px #bbb;
    -webkit-box-shadow: 3px 3px 7px #bbb;
    box-shadow: 3px 3px 7px #bbb;
    border: 1px solid rgb(190,200,210);
    background-color: rgb(250,250,250);
    border-radius: 0;
    padding: 0.7em;
}

.scripted .DropdownPanel-expanded > .button,
.scripted .DropdownPanel-expanded > .button:hover {
    border: 1px solid rgb(190,200,210);
    border-radius: 0;
    border-bottom-color: rgb(250,250,250);
    background-color: rgb(250,250,250);
}

/* SearchableCheckList
-----------------------------------------------------------------------------*/
.SearchableCheckList .no_match {
    display: none;
}

.SearchableCheckList .toggle_selection_links {
    margin: 0.5em 0;
}

.SearchableCheckList .toggle_selection_links a {
    font-size: 0.8em;
}

.SearchableCheckList .toggle_selection_links a[disabled] {
    opacity: 0.5;
    text-decoration: none;
}

.SearchableCheckList .toggle_selection_links .empty_selection_link {
    margin-left: 0.4em;
}

.BackOfficeLayout .SearchableCheckList.search_enabled .check_list {
    max-height: 24.8em;
    overflow: auto;
    padding: 0.5em;
    padding-right: 1em;
    border: 1px solid #ddd;
    background-color: white;
}

/* Tables
-----------------------------------------------------------------------------*/

body.scripted .BackOfficeLayout .Table .row_selection_control {
    position: absolute;
    left: -1000px;
}

.BackOfficeLayout .Table,
.BackOfficeLayout .PropertyTable {
	clear: both;
    border-collapse: collapse;
    width: 100%;
}

.BackOfficeLayout .Table {
    border: 1px solid #d6d6d6;
}

.BackOfficeLayout .PropertyTable th {
    width: 25%;
}

.BackOfficeLayout .PropertyTable tr.group_header th {
    font-weight: bold;
}

.BackOfficeLayout .PropertyTable tbody + tbody tr.group_header th {
    padding-top: 2em;
}

.BackOfficeLayout .PropertyTable tr.member_row th {
    padding-left: 2em;
}

.BackOfficeLayout .Table th {
    border: 1px solid #ccc;
}

.BackOfficeLayout .Table th a {
    text-decoration: none;
}

.BackOfficeLayout .Table th,
.ObjectDiff th {
    background-position: bottom left;
    background-repeat: repeat-x;
    background-image: url(../images/header.png);
    background-image: -webkit-linear-gradient(#eee, #d6d6d6);
    background-image: linear-gradient(#eee, #d6d6d6);
    background-color: #e0e0e0;
}

.BackOfficeLayout .ContentTable td,
.BackOfficeLayout .ContentTable td * {
    cursor: default;
}

.BackOfficeLayout .ContentTable .ItemLabel {
    display: inline-block;
}

.BackOfficeLayout .ContentTable th .column_dropdown > .button > .label {
    background-position: right 0.5em;
    white-space: nowrap;
}

.BackOfficeLayout .ContentTable th.last .column_dropdown > .panel_wrapper > .panel {
    left: auto;
    right: 0;
}

.BackOfficeLayout .ContentTable th .column_panel {
    min-width: 19em;
}

.BackOfficeLayout .ContentTable th .column_panel > div + div {
    margin-top: 1em;
}

.BackOfficeLayout .ContentTable th .column_panel .options_header {
    margin-bottom: 0.6em;
    padding-bottom: 0.2em;    
    font-size: 0.9em;
    font-weight: bold;
    color: #555;
    border-bottom: 1px dotted #ccc;    
}

.BackOfficeLayout .ContentTable th .column_panel > div > a + a {
    margin-top: 0.4em;
}

.BackOfficeLayout .ContentTable th .column_panel > div > a {
    display: block;
    background-repeat: no-repeat;
    background-position: 0 -2px;
    padding-left: 18px;
}

.BackOfficeLayout .ContentTable .sorting_options a.selected {
    font-weight: bold;
}

.BackOfficeLayout .ContentTable .sorting_options .ascending {
    background-image: url(../images/ascending.png);
    _background-position:0 -2px;
    _background-repeat:no-repeat;
    _display:block;
    _padding-left:18px; 
}

.BackOfficeLayout .ContentTable .sorting_options .descending {
    background-image: url(../images/descending.png);
    _background-position:0 -2px;
    _background-repeat:no-repeat;
    _display:block;
    _padding-left:18px; 
}
/* ... */

